# Serial_tools

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.hpp
src/tty_device/: mypthread.c  mypthread.h  serial.c  serial.h  test.c  tty_open.cpp  tty_open_re.cpp
